[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "snowflake-nullcheck"
version = "0.4.2"
description = "Null value detection and data quality testing for Snowflake"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NullZone Contributors"}
]
keywords = ["snowflake", "data-quality", "testing", "null-detection", "dbt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "snowflake-connector-python>=3.6.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "junitparser>=3.0",
]

[project.scripts]
nullcheck = "nullzone.cli:main"

[project.urls]
Homepage = "https://github.com/snowflake-labs/snowflake-nullcheck"
Issues = "https://github.com/snowflake-labs/snowflake-nullcheck/issues"
